tests/baselines/reference/parserConstructorAmbiguity3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity3.ts (2 errors) ====
    new Date<A>
               
!!! error TS1109: Expression expected.
             ~
!!! error TS2304: Cannot find name 'A'.